--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,6 +67,7 @@ body {
 .top-wrapper{
   flex-grow: 1;
 }
+
 .top-header ul {
   display:flex;
   flex-direction: row;
@@ -86,14 +87,27 @@ body {
   letter-spacing: 1px;
 }
 
-.rounded-image {
-  border-radius: 100%;
-}
-
 .header-link {
   text-decoration: none;
   outline: 0;
   color: black;
+}
+
+#menu-link{
+  display: block;
+  height: 20px;
+  width: 20px;
+  background-image: url( "../images/rectangles-1.png" );
+}
+
+#profile-link {
+  display: block;
+  height: 30px;
+  width: 30px;
+  background-image: url("../images/profile-image.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 100%;
 }
 
 .header-link:hover, .header-link:active, .header-link:focus {
@@ -110,7 +124,7 @@ main {
 }
 
 .search-wrapper {
-  display: flex;
+  display: flex; 
   margin: 20px auto 0px auto;
   width: 550px;
   border: 1px solid #dbd2d2;
@@ -121,9 +135,22 @@ main {
   padding-right: 20px;
 }
 
+.search-wrapper::before{
+  content: "";
+  background-image: url( "../images/search-black.png" );
+  height: 19px;
+  width: 20px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+
+
 #search-text:focus, #search-text:active {
   outline: none;
 }
+
+
 
 .search-wrapper:hover{
   box-shadow: 0px 0px 3px 1px #ccc2c2;
