--- a/styles/styles.css
+++ b/styles/styles.css
@@ -114,9 +114,6 @@ body {
   text-decoration: underline;
 }
 
-main {
-  display: block;
-}
 
 #main-logo {
   display: block;
@@ -124,15 +121,10 @@ main {
 }
 
 .search-wrapper {
-  display: flex; 
+  display: flex;
   margin: 20px auto 0px auto;
-  width: 550px;
-  border: 1px solid #dbd2d2;
-  height: 2.5em;
+  width: 592px;
   align-items: center;
-  border-radius: 25px;
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .search-wrapper::before{
@@ -142,29 +134,31 @@ main {
   width: 20px;
   background-position: center;
   background-repeat: no-repeat;
+  position: relative;
+  left: 45px;
 }
-
-
 
 #search-text:focus, #search-text:active {
   outline: none;
 }
 
 
-
-.search-wrapper:hover{
+#search-text:hover, #search-text:focus{
   box-shadow: 0px 0px 3px 1px #ccc2c2;
 }
 
 
 #search-text {
-  border: 0;
   font-family: "Arial", "Times New Roman";
-  line-height: 1.5em;
+  line-height: 2.5em;
   font-size: 0.9em;
   flex-grow: 1;
   margin-left: 10px;
-
+  width: 592px;
+  border-radius: 25px;
+  padding-left: 55px;
+  padding-right: 30px;
+  border: 1px solid #dbd2d2;
 }
 
 .search-button-wrapper {
